--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "firebase-tools": "^9.16.0",
     "mongoose": "^5.12.13",
     "mongoose-aggregate-paginate-v2": "^1.0.42",
     "mongoose-fuzzy-searching": "^2.0.2",
